going to normalize.css

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -42,7 +42,7 @@
 				<section class="section clearfix">
 	<ul class="big-ul"><!--big ul-->
 		<li class="big-ul-item">
-						<div class="cont-title clearfix"><h2>У вас интересный проект? Напишите мне</h2></div>
+						<div class="clearfix"><h2 class="cont-title">У вас интересный проект? Напишите мне</h2></div>
 						<div class="form clearfix">
 							<form name="form" method="post" action="">
 				<label class="yourname clearfix"><p class="form-text-font">Имя</p>
