--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<!--bower:css-->
-	<link rel="stylesheet" href="bower/css-reset/reset.min.css">
+	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<!--end-bower-->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-touch-icon-57x57.png">
@@ -65,7 +65,7 @@
 				<section class="section clearfix">
 	<ul class="big-ul"><!--big ul-->
 		<li class="big-ul-item">
-						<div class="zagolovok"><h2>Основная информация</h2></div>
+						<div><h2 class="zagolovok">Основная информация</h2></div>
 						<div class="main-image clearfix"><img class="my-photo" src="img/photo.jpg" alt="Мое фото"></div>
 						<div class="info">
 						<ul class="my-info">
@@ -86,17 +86,17 @@
 						</div><!--end info-->
 					</li><!--end self-->
 		<li class="big-ul-item">
-						<div class="zagolovok"><h2>Опыт работы</h2></div>
+						<div><h2 class="zagolovok">Опыт работы</h2></div>
 						<div class="text-area">
 						<ul class="big-ul-list">
-							<li class="big-ul-list-item">
-								<div class="big-ul-text-item"><h3>"ОАО ЕВРАЗ ЗСМК" - Инженер-электроник</h3>
+							<li class="big-ul-list-item-port-one">
+								<div><h3 class="big-ul-text-item">"ОАО ЕВРАЗ ЗСМК" - Инженер-электроник</h3>
 							</div>
 								<div class="term"><p  class="paragraph">Март 2012 - Март 2015</p>
 							</div>
 							</li>
-							<li class="big-ul-list-item">
-									<div class="big-ul-text-item"><h3>"ООО Куйбышевская инженерная компания" - Программист</h3></div>
+							<li class="big-ul-list-item-port-two">
+									<div><h3 class="big-ul-text-item">"ООО Куйбышевская инженерная компания" - Программист</h3></div>
 									<div class="term"><p  class="paragraph">Январь 2008 - Июнь 2009</p>
 									</div>
 							</li>
@@ -104,12 +104,12 @@
 					</div><!--end text-area-->
 		</li><!--end big-ul-item-->
 		<li class="big-ul-item">
-						<div class="zagolovok"><h2>Образование</h2></div>
+						<div><h2 class="zagolovok">Образование</h2></div>
 						<div class="text-area">
 						<ul class="big-ul-list">
-							<li class="big-ul-list-item-hat"><div class="big-ul-text-item"><h3>Высшее. НФИ КемГУ ФИТ</h3></div>
+							<li class="big-ul-list-item-hat"><div><h3 class="big-ul-text-item">Высшее. НФИ КемГУ ФИТ</h3></div>
 						<div class="term"><p  class="paragraph">Сентябрь 2007 - Июль 2012</p></div></li>
-							<li class="big-ul-list-item-file"><div class="big-ul-text-item"><h3>Курсы Loftschool.ru</h3></div>
+							<li class="big-ul-list-item-file"><div><h3 class="big-ul-text-item">Курсы Loftschool.ru</h3></div>
 					<div class="term"><p  class="paragraph">Сентябрь 2015 - по настоящее время</p></div></li>
 					</ul>
 					</div><!--end text-area-->
