--- a/app/works.html
+++ b/app/works.html
@@ -42,7 +42,7 @@
 				<section class="section clearfix">
 	<ul class="big-ul"><!--big ul-->
 		<li class="big-ul-item">
-						<div class="my-jobs-title"><h2>Мои работы</h2></div>
+						<div><h2 class="my-jobs-title">Мои работы</h2></div>
 						<div class="jobs">
 						<ul class="my-jobs clearfix">
 						<li class="my-jobs-item">
