убрал отрицательные верхние отступы

--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 				<section class="section clearfix">
 	<ul class="big-ul"><!--big ul-->
 		<li class="big-ul-item">
-						<div><h2 class="zagolovok">Основная информация</h2></div>
+						<div class="wrap-title"><h2 class="zagolovok">Основная информация</h2></div>
 						<div class="main-image clearfix"><img class="my-photo" src="img/photo.jpg" alt="Мое фото"></div>
 						<div class="info">
 						<ul class="my-info">
