Привел к нормальному виду works & contacts

--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,11 @@
 	<meta name="author" content="">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<!--bower:css-->
+	<!--css-->
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
-	<!--end-bower-->
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="fonts/fira.css">
+	<!--Favicon-->
 	<link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-touch-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-touch-icon-72x72.png">
