--- a/app/works.html
+++ b/app/works.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
 	<meta charset="UTF-8">
+	<!-- Просим IE переключиться в последний режим -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Самопрезентация Loftschool</title>
+	<!---SEO-->
+	<meta name="author" content="">
+	<meta name="keywords" content="">
+	<meta name="description" content="">
+	<!--css-->
+	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="fonts/fira.css">
+	<!--Favicon-->
+	<link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-touch-icon-76x76.png">
+	<link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/favicon/manifest.json">
+	<meta name="apple-mobile-web-app-title" content="makskluch.ru">
+	<meta name="application-name" content="makskluch.ru">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 </head>
-<body>
+<body class="body">
+<!--[if lt IE 8]>
+<p class="browsehappy">Ваш браузер <strong>устарел</strong>. Пожалуйста <a href="http://browsehappy.com/">Обновите</a> его.</p>
+<![endif]-->
 <div class="wrapper">
 		<header class="header">
 		<div class="head clearfix">
@@ -46,32 +70,32 @@
 						<div class="jobs">
 						<ul class="my-jobs clearfix">
 						<li class="my-jobs-item">
-						<ul>
+						<ul class="list-of-jobs">
 							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-one.jpg" alt=""></a></li>
 							<li><a class="link-in-jobs" href="#"><p class="my-jobs-item-link">www.site.ru</p></a></li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
 						</ul>
 						</li>
 						<li class="my-jobs-item">					
-							<ul>
+							<ul class="list-of-jobs">
 							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-two.jpg" alt=""></a></li>
 								<li><a class="link-in-jobs" href="#"><p class="my-jobs-item-link">www.site.ru</p></a></li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
 						</ul></li>
 						<li class="my-jobs-item">						
-						<ul>
+						<ul class="list-of-jobs">
 							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-three.jpg" alt=""></a></li>
 								<li><a class="link-in-jobs" href="#"><p class="my-jobs-item-link">www.site.ru</p></a></li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
 						</ul></li>
 						<li class="my-jobs-item">					
-							<ul>
+							<ul class="list-of-jobs">
 							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-four.jpg" alt=""></a></li>
 								<li><a class="link-in-jobs" href="#"><p class="my-jobs-item-link">www.site.ru</p></a></li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
 						</ul></li>
 						<li class="my-jobs-item">					
-							<ul>
+							<ul class="list-of-jobs">
 							<li><a class="my-jobs-item-inside" href="#"><img src="img/add-new.png" alt=""></a></li>
 						</ul></li>
 						</ul><!--end my-jobs-->
