--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,13 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="fonts/fira.css">
 	<!--Favicon-->
-	<link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-touch-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-touch-icon-76x76.png">
-	<link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="/favicon/manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png">
+	<link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="favicon/manifest.json">
 	<meta name="apple-mobile-web-app-title" content="makskluch.ru">
 	<meta name="application-name" content="makskluch.ru">
 	<meta name="msapplication-TileColor" content="#da532c">
@@ -76,11 +76,13 @@
 						<li class="my-info-item"><p class="paragraph-info">Моя специализация:<span class="spantext">Web-разработчик</span></p></li>
 						<li class="my-info-item clearfix"><p class="paragraph-info keys">Ключевые навыки:</p>
 						<div class="skill">
-							<img class="skills" src="img/html.png" alt="html">
-							<img class="skills" src="img/css.png" alt="css">
-							<img class="skills" src="img/java.png" alt="javascript">
-							<img class="skills" src="img/gulp.png" alt="gulp">
-							<img class="skills" src="img/git.png" alt="git">
+							<ul class="skills-list">
+							<li class="skills-list-item">html</li>
+							<li class="skills-list-item">css</li>
+							<li class="skills-list-item">JavaScript</li>
+							<li class="skills-list-item">gulp</li>
+							<li class="skills-list-item">git</li>
+							</ul>
 							</div><!--end skill-->
 						</li><!--end keys-->
 						</ul><!--end my-info-->
