--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 		<div class="left-image">
 		<ul class="logos clearfix">
 				<li class="man"><a href="#"><img class="head-logo" src="img/Logo.png"  alt="Лого"></a></li>
-				<li class="slogan"><a href="#"><img class="head-logo-text" src="img/logo2.png" alt="LoftSchool от мыслителя к создателю"></a></li>
+				<li class="slogan"><a class="head-logo-text" href="#"><img src="img/logo2.png" alt="LoftSchool от мыслителя к создателю"></a></li>
 		</ul><!--end logos-->	
 				</div><!--end left-image-->	
 				<div class="right-image clearfix">
@@ -56,12 +56,28 @@
 				<li class="menu-work"><a class="work-link" href="works.html">Мои работы</a></li>
 				<li class="menu-cont"><a class="cont-link" href="contacts.html">Связаться со мной</a></li>
 			</ul><!--end menu ul-->	
-					<ul class="contact-menu">
-						<li class="cont">Контакты</li>
-						<li class="mail"><a class="mailimg" href="mailto:mak2207@mail.ru">mak2207@mail.ru</a></li>
-						<li class="phone"><a class="phoneimg" href="tel:+79516139086">+79516139086</a></li>
-						<li class="skype"><a class="skypeimg" href="skype:darkjokerwow?call">darkjokerwow</a></li>
-					</ul><!--end contact-menu-->	
+			<div class="contacts">
+						<ul class="contacts-list">
+							<li class="contacts-item-head">
+								<div class="contacts-text-head">Контакты</div>
+							</li>
+							<li class="contacts-item-mail">
+								<a href="mailto:mak2207@mail.ru" class="contacts-link">
+									<div class="contacts-text">mak2207@mail.ru</div>
+								</a>
+							</li>
+							<li class="contacts-item-phone">
+								<a href="tel:+79516139086" class="contacts-link">
+									<div class="contacts-text">+79516139086</div>
+								</a>
+							</li>
+							<li class="contacts-item-skype">
+								<a href="skype:darkjokerwow?call" class="contacts-link">
+									<div class="contacts-text">darkjokerwow</div>
+								</a>
+							</li><!--end contacts-item-skype-->
+						</ul><!--end contacts-list-->
+					</div><!--end contacts-->
 		</nav><!--end nav-->
 				<section class="section clearfix">
 	<ul class="big-ul"><!--big ul-->
