--- a/app/works.html
+++ b/app/works.html
@@ -53,15 +53,31 @@
 		<nav class="navigation clearfix">
 			<ul class="menu">
 				<li class="menu-about"><a class="about-link" href="index.html">Обо мне</a></li>
-				<li class="menu-work active"><a class="work-link active" href="#">Мои работы</a></li>
+				<li class="menu-work active"><a class="work-link active" href="works.html">Мои работы</a></li>
 				<li class="menu-cont"><a class="cont-link" href="contacts.html">Связаться со мной</a></li>
 			</ul><!--end menu ul-->	
-					<ul class="contact-menu">
-						<li class="cont">Контакты</li>
-						<li class="mail"><a class="mailimg" href="mailto:mak2207@mail.ru">mak2207@mail.ru</a></li>
-						<li class="phone"><a class="phoneimg" href="tel:+79516139086">+79516139086</a></li>
-						<li class="skype"><a class="skypeimg" href="skype:darkjokerwow?call">darkjokerwow</a></li>
-					</ul><!--end contact-menu-->	
+			<div class="contacts">
+						<ul class="contacts-list">
+							<li class="contacts-item-head">
+								<div class="contacts-text-head">Контакты</div>
+							</li>
+							<li class="contacts-item-mail">
+								<a href="mailto:mak2207@mail.ru" class="contacts-link">
+									<div class="contacts-text">mak2207@mail.ru</div>
+								</a>
+							</li>
+							<li class="contacts-item-phone">
+								<a href="tel:+79516139086" class="contacts-link">
+									<div class="contacts-text">+79516139086</div>
+								</a>
+							</li>
+							<li class="contacts-item-skype">
+								<a href="skype:darkjokerwow?call" class="contacts-link">
+									<div class="contacts-text">darkjokerwow</div>
+								</a>
+							</li><!--end contacts-item-skype-->
+						</ul><!--end contacts-list-->
+					</div><!--end contacts-->
 		</nav><!--end nav-->
 				<section class="section clearfix">
 	<ul class="big-ul"><!--big ul-->
