Исправил мелкие ошибки и сделал страницу auth.html

--- a/app/index.html
+++ b/app/index.html
@@ -140,7 +140,7 @@
 	<footer class="footer">
 	<div class="foot-wrap clearfix">
 		<div class="wrap-left">
-				<a class="lock" href="#">Вход</a>
+				<a class="lock" href="auth.html">Вход</a>
 		</div><!--end wrap-left-->
 		<div class="wrap-right">
 			<p class="ftext-area">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его</p>
