--- a/app/works.html
+++ b/app/works.html
@@ -157,7 +157,7 @@
 	<footer class="footer">
 	<div class="foot-wrap clearfix">
 		<div class="wrap-left">
-				<a class="lock" href="#"></a>
+				<a class="lock" href="auth.html"></a>
 		</div><!--end wrap-left-->
 		<div class="wrap-right">
 			<p class="ftext-area">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его</p>
