Сделал ховеры на Моих Работах, но теперь появился косяк с позиционированием

--- a/app/works.html
+++ b/app/works.html
@@ -86,9 +86,11 @@
 						<div class="jobs">
 						<ul class="my-jobs clearfix">
 						<li class="my-jobs-item">
-						<ul class="list-of-jobs">
+						<ul class="list-of-jobs work-hover">
 							<li><a class="my-jobs-item-inside" href="#">
-							<img class="img-dec" src="img/work-one.jpg" alt="">Подробнее</a></li>
+							<img class="img-dec" src="img/work-one.jpg" alt=""></a></li>
+							<li><a class="link-in-jobs link-work" href="#">
+							<p class="my-jobs-item-link work-text">www.site.ru</p></a>
 							<li><a class="link-in-jobs" href="#">
 							<p class="my-jobs-item-link">www.site.ru</p></a>
 							</li>
@@ -96,22 +98,29 @@
 						</ul>
 						</li>
 						<li class="my-jobs-item">					
-							<ul class="list-of-jobs">
-							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-two.jpg" alt="">Подробнее</a></li>
-								<li><a class="link-in-jobs" href="#"><p class="my-jobs-item-link">www.site.ru</p></a></li>
+							<ul class="list-of-jobs work-hover">
+							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-two.jpg" alt=""></a></li>
+								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">www.site.ru</p></a></li>
+								<li><a class="link-in-jobs" href="#">
+							<p class="my-jobs-item-link">www.site.ru</p></a>
+							</li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
 						</ul></li>
 						<li class="my-jobs-item">						
-						<ul class="list-of-jobs">
-							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-three.jpg" alt="">Подробнее</a></li>
-								<li><a class="link-in-jobs" href="#"><p class="my-jobs-item-link">www.site.ru</p></a></li>
+						<ul class="list-of-jobs work-hover">
+							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-three.jpg" alt=""></a></li>
+								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">www.site.ru</p></a></li><li><a class="link-in-jobs" href="#">
+							<p class="my-jobs-item-link">www.site.ru</p></a>
+							</li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
 						</ul></li>
 						<li class="my-jobs-item">					
-							<ul class="list-of-jobs">
+							<ul class="list-of-jobs work-hover">
 							<li><a class="my-jobs-item-inside" href="#">
-							<img class="img-dec" src="img/work-four.jpg" alt="">Подробнее</a></li>
-								<li><a class="link-in-jobs" href="#"><p class="my-jobs-item-link">www.site.ru</p></a></li>
+							<img class="img-dec" src="img/work-four.jpg" alt=""></a></li>
+								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">www.site.ru</p></a></li><li><a class="link-in-jobs" href="#">
+							<p class="my-jobs-item-link">www.site.ru</p></a>
+							</li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
 						</ul></li>
 						<li class="my-jobs-item">					
