Исправил позиционирование на странице works

--- a/app/works.html
+++ b/app/works.html
@@ -90,7 +90,7 @@
 							<li><a class="my-jobs-item-inside" href="#">
 							<img class="img-dec" src="img/work-one.jpg" alt=""></a></li>
 							<li><a class="link-in-jobs link-work" href="#">
-							<p class="my-jobs-item-link work-text">www.site.ru</p></a>
+							<p class="my-jobs-item-link work-text">Подробнее...</p></a>
 							<li><a class="link-in-jobs" href="#">
 							<p class="my-jobs-item-link">www.site.ru</p></a>
 							</li>
@@ -100,7 +100,7 @@
 						<li class="my-jobs-item">					
 							<ul class="list-of-jobs work-hover">
 							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-two.jpg" alt=""></a></li>
-								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">www.site.ru</p></a></li>
+								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">Подробнее...</p></a></li>
 								<li><a class="link-in-jobs" href="#">
 							<p class="my-jobs-item-link">www.site.ru</p></a>
 							</li>
@@ -109,7 +109,7 @@
 						<li class="my-jobs-item">						
 						<ul class="list-of-jobs work-hover">
 							<li><a class="my-jobs-item-inside" href="#"><img class="img-dec" src="img/work-three.jpg" alt=""></a></li>
-								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">www.site.ru</p></a></li><li><a class="link-in-jobs" href="#">
+								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">Подробнее...</p></a></li><li><a class="link-in-jobs" href="#">
 							<p class="my-jobs-item-link">www.site.ru</p></a>
 							</li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
@@ -118,7 +118,7 @@
 							<ul class="list-of-jobs work-hover">
 							<li><a class="my-jobs-item-inside" href="#">
 							<img class="img-dec" src="img/work-four.jpg" alt=""></a></li>
-								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">www.site.ru</p></a></li><li><a class="link-in-jobs" href="#">
+								<li><a class="link-in-jobs link-work" href="#"><p class="my-jobs-item-link work-text">Подробнее...</p></a></li><li><a class="link-in-jobs" href="#">
 							<p class="my-jobs-item-link">www.site.ru</p></a>
 							</li>
 							<li><p class="my-jobs-item-inside">Информация о проекте 1 превью 2 строки...</p></li>
