Исправил ошибки после сдачи Части 2

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -92,7 +92,7 @@
 				<input class="input" value="" type="text" name="email" id="email" placeholder="Куда мне писать?">
 			</label>
 		<label class="yourmessage"><p class="form-textarea">Сообщение</p>
-				<textarea class="textarea" name="message" id="message" placeholder="Кратко в чем суть?"></textarea>
+				<textarea class="textarea" value="" name="message" id="message" placeholder="Кратко в чем суть?"></textarea>
 				</label>
 				<label class="captcha clearfix"><p class="form-text-captcha">Введите код, указанный на картинке</p></label>
 					<img class="captcha-img" src="img/captcha.png" alt="каптча">
