--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,8 @@
 							<li class="skills-list-item">html</li>
 							<li class="skills-list-item">css</li>
 							<li class="skills-list-item">JavaScript</li>
+							<li class="skills-list-item">PHP</li>
+							<li class="skills-list-item">MySQL</li>
 							<li class="skills-list-item">gulp</li>
 							<li class="skills-list-item">git</li>
 							</ul>
