--- a/app/contacts.html
+++ b/app/contacts.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="fonts/fira.css">
+	<link rel="stylesheet" href="bower/qtip2/jquery.qtip.css">
 	<!--Favicon-->
 	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
@@ -85,20 +86,20 @@
 		<li class="big-ul-item">
 						<div class="clearfix"><h2 class="cont-title">У вас интересный проект? Напишите мне</h2></div>
 						<div class="form clearfix">
-							<form name="form" method="post" action="">
+							<form id="forms" name="form" method="" action="">
 				<label class="yourname clearfix"><p class="form-text-font">Имя</p>
-				<input class="input" value="" type="text" name="name" id="name" placeholder="Как к Вам обращаться?">
+				<input class="input" value="" type="text" name="name" id="name" placeholder="Как к Вам обращаться?" qtip-position="left" qtip-content="Введите ваше имя">
 			</label>
 				<label class="yourmail"><p class="form-text-font">Email</p>
-				<input class="input" value="" type="text" name="email" id="email" placeholder="Куда мне писать?">
+				<input class="input" value="" type="text" name="email" id="email" placeholder="Куда мне писать?" qtip-position="right" qtip-content="Введите ваш Email">
 			</label>
 		<label class="yourmessage"><p class="form-textarea">Сообщение</p>
-				<textarea class="textarea" value="" name="message" id="message" placeholder="Кратко в чем суть?"></textarea>
+				<textarea class="textarea" value="" name="message" id="message" placeholder="Кратко в чем суть?" qtip-position="left" qtip-content="Введите ваш текст"></textarea>
 				</label>
 				<label class="captcha clearfix"><p class="form-text-captcha">Введите код, указанный на картинке</p></label>
 					<img class="captcha-img" src="img/captcha.png" alt="каптча">
 					<label class="captcha-code clearfix">
-					<input class="captcha-input" value="" type="text" name="name" id="name" placeholder="Введите код">
+					<input class="captcha-input" value="" type="text" name="name" id="name" placeholder="Введите код" qtip-position="right" qtip-content="Введите код с картинки">
 			</label>
 			<div class="buttons clearfix">
 				<button class="submit-one" type="submit" name="submit" id="submit" value="">Отправить</button>
@@ -123,8 +124,10 @@
 		</div><!--end main-wrap-->
 	</footer><!--end footer-->
 		<script src="../bower/jquery/jquery.js"> </script>
+		<script src="bower/qtip2/jquery.qtip.js"></script>
 		<script src="bower/jquery-placeholder/jquery.placeholder.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/validate.js"></script>
 		<script src="js/contacts.js"></script>
 </body>
 </html>
